--- a/App_Store_Analysis.ipynb
+++ b/App_Store_Analysis.ipynb
@@ -71,7 +71,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QZJGkX5GLfzW",
-        "outputId": "8887f277-1636-414c-e43e-0e3bce861802"
+        "outputId": "d2fed3e3-9193-41ec-9c39-22bfc11e17bf"
       },
       "source": [
         "# Mount Google.\r\n",
@@ -113,7 +113,7 @@
         "print(\"\\n\")"
       ],
       "id": "QZJGkX5GLfzW",
-      "execution_count": 3,
+      "execution_count": 236,
       "outputs": [
         {
           "output_type": "stream",
@@ -156,7 +156,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IRR19dhtQ8SB",
-        "outputId": "ae15ea71-4a14-4438-cd90-772121e1d4b3"
+        "outputId": "3a6471c6-8179-4474-afe7-b1306f88257b"
       },
       "source": [
         "# Take data set, start and end point of slice, and count columns as a parameter\r\n",
@@ -175,7 +175,7 @@
         "explore_data(android, 0, 3, True)"
       ],
       "id": "IRR19dhtQ8SB",
-      "execution_count": 4,
+      "execution_count": 237,
       "outputs": [
         {
           "output_type": "stream",
@@ -231,7 +231,7 @@
         "    #return data_set #use for testing.\r\n"
       ],
       "id": "JNprGcC5pE4Q",
-      "execution_count": 5,
+      "execution_count": 238,
       "outputs": []
     },
     {
@@ -253,13 +253,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7b7e302e-0ec5-4387-d26e-43f8709e7775"
+        "outputId": "c9fc8c18-87f0-494f-fbd5-28a945869a22"
       },
       "source": [
         "del_row(android,10472)"
       ],
       "id": "-GM56J9vB6wj",
-      "execution_count": 6,
+      "execution_count": 239,
       "outputs": [
         {
           "output_type": "stream",
@@ -298,7 +298,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "23_VdZIouhNQ",
-        "outputId": "2aa9e9d2-5307-49af-db68-9ba55bf06a65"
+        "outputId": "90899964-d8aa-464b-8679-a36e1e590c16"
       },
       "source": [
         "def find_dup(dataset):\r\n",
@@ -324,7 +324,7 @@
         "\r\n"
       ],
       "id": "23_VdZIouhNQ",
-      "execution_count": 7,
+      "execution_count": 240,
       "outputs": [
         {
           "output_type": "stream",
@@ -360,7 +360,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e3bcb4c3-f423-4de0-e6d5-a998358c582e"
+        "outputId": "069411e3-9213-4bc3-854b-f4f13b31f770"
       },
       "source": [
         "\r\n",
@@ -383,7 +383,7 @@
         "print(\"\\n\")\r\n"
       ],
       "id": "_AMiVfjTzoyR",
-      "execution_count": 8,
+      "execution_count": 241,
       "outputs": [
         {
           "output_type": "stream",
@@ -403,7 +403,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MXIrxKj5fyCJ",
-        "outputId": "c7c4f5fb-f8f4-4367-b733-771b88f6c0b5"
+        "outputId": "328471de-7949-4788-f8e4-d548ddb68530"
       },
       "source": [
         "# Global scope\r\n",
@@ -431,7 +431,7 @@
         "\r\n"
       ],
       "id": "MXIrxKj5fyCJ",
-      "execution_count": 9,
+      "execution_count": 242,
       "outputs": [
         {
           "output_type": "stream",
@@ -478,7 +478,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XZvieDdWuaA5",
-        "outputId": "895e74d4-0a56-4e62-95e7-c571ea936be8"
+        "outputId": "0ae8513c-2da9-49cb-c87d-b5f318978d00"
       },
       "source": [
         "# iOS and Android datasets have app names in different columns, so we need to \r\n",
@@ -512,7 +512,7 @@
         "print(\"iOS data set now has\", len(eng_ios), \"rows and is called eng_ios.\")\r\n"
       ],
       "id": "XZvieDdWuaA5",
-      "execution_count": 10,
+      "execution_count": 243,
       "outputs": [
         {
           "output_type": "stream",
@@ -555,7 +555,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "po-adH0-ZiNs",
-        "outputId": "ac3c7556-723d-444b-d7b1-de4ef4ddfa3a"
+        "outputId": "632c39e2-e330-46db-b004-5c1b5183a50c"
       },
       "source": [
         "print(ios_header)\r\n",
@@ -565,7 +565,7 @@
         "print(eng_android[0])"
       ],
       "id": "po-adH0-ZiNs",
-      "execution_count": 11,
+      "execution_count": 244,
       "outputs": [
         {
           "output_type": "stream",
@@ -610,7 +610,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PtFBArcxaMwx",
-        "outputId": "5cff01fb-e26e-40f2-e7fe-183859edd0aa"
+        "outputId": "da385bde-dd39-4bb0-dbf2-c827c1bb636a"
       },
       "source": [
         "def get_free_ios(dataset):\r\n",
@@ -653,7 +653,7 @@
         "\r\n"
       ],
       "id": "PtFBArcxaMwx",
-      "execution_count": 12,
+      "execution_count": 245,
       "outputs": [
         {
           "output_type": "stream",
@@ -693,8 +693,7 @@
         "### Frequency Table\r\n",
         "Analysis will start with a frequency table.\r\n",
         "\r\n",
-        "The function **type_freq** will return a dictionary frequency table given dataset and column as a \r\n",
-        "parameter.\r\n",
+        "The function **freq_table** will return a dictionary frequency table given dataset and column as a parameter.\r\n",
         "\r\n",
         "\r\n"
       ],
@@ -707,10 +706,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6mYQCHVWjp2X",
-        "outputId": "bc66c05d-f083-490b-eaeb-0cb9d3dff460"
+        "outputId": "e7213059-430f-473f-9628-485f2472d0b8"
       },
       "source": [
-        "def type_freq(dataset, column):\r\n",
+        "def freq_table(dataset, column):\r\n",
         "  freq_table = {}\r\n",
         "  counter = 0\r\n",
         "  for row in dataset:\r\n",
@@ -721,23 +720,23 @@
         "      freq_table[row[column]] = counter\r\n",
         "  return freq_table\r\n",
         "\r\n",
-        "android_category_dict = type_freq(free_eng_android, 1)\r\n",
+        "android_category_dict = freq_table(free_eng_android, 1)\r\n",
         "print(\"Frequency table created for Android Category\")\r\n",
         "print(\"This many rows were parsed:\", sum(android_category_dict.values()))\r\n",
         "print(android_category_dict)\r\n",
         "print(\"\\n\")\r\n",
-        "android_genre_dict = type_freq(free_eng_android, 9)\r\n",
+        "android_genre_dict = freq_table(free_eng_android, 9)\r\n",
         "print(\"Frequency table created for Android Genre\")\r\n",
         "print(\"This many rows were parsed:\", sum(android_genre_dict.values()))\r\n",
         "print(android_genre_dict)\r\n",
         "print(\"\\n\")\r\n",
-        "ios_genre_dict = type_freq(free_eng_ios, 11)\r\n",
+        "ios_genre_dict = freq_table(free_eng_ios, 11)\r\n",
         "print(\"Frequency table created for iOS genre\")\r\n",
         "print(\"This many rows were parsed:\", sum(ios_genre_dict.values()))\r\n",
         "print(ios_genre_dict)"
       ],
       "id": "6mYQCHVWjp2X",
-      "execution_count": 13,
+      "execution_count": 246,
       "outputs": [
         {
           "output_type": "stream",
@@ -809,7 +808,7 @@
         "  return key"
       ],
       "id": "kxcDt9AKoaE7",
-      "execution_count": 32,
+      "execution_count": 247,
       "outputs": []
     },
     {
@@ -832,10 +831,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CnXIbc6UOlVn",
-        "outputId": "eb44de63-eca9-4538-c9b5-19645bfa98b2"
+        "outputId": "a24ed82b-43c9-4dc0-e9ea-abfa19855da5"
       },
       "source": [
-        "def sort_dict(dictionary, desc=True, percent=True):\r\n",
+        "def sort_dict(dictionary, desc=True, percent=False):\r\n",
         "  sorted_dict = {}\r\n",
         "  index_list = sorted(list(dictionary.values()), reverse=desc)\r\n",
         "  sum_index_list = sum(index_list)\r\n",
@@ -851,42 +850,42 @@
         "  return sorted_dict \r\n",
         "\r\n",
         "android_category_dict_desc = sort_dict(android_category_dict, desc=True, percent=False)\r\n",
-        "android_category_dict_desc_percent = sort_dict(android_category_dict, desc=True)\r\n",
-        "print(\"Android App Categories\")\r\n",
+        "android_category_dict_desc_percent = sort_dict(android_category_dict, desc=True, percent=True)\r\n",
+        "print(\"Android App Categories (Raw / %)\")\r\n",
         "print(android_category_dict_desc)\r\n",
         "print(android_category_dict_desc_percent)\r\n",
         "print(\"\\n\")\r\n",
         "android_genre_dict_desc = sort_dict(android_genre_dict, desc=True, percent=False)\r\n",
-        "android_genre_dict_desc_percent = sort_dict(android_genre_dict, desc=True)\r\n",
-        "print(\"Android App Genres\")\r\n",
+        "android_genre_dict_desc_percent = sort_dict(android_genre_dict, desc=True, percent=True)\r\n",
+        "print(\"Android App Genres (Raw / %)\")\r\n",
         "print(android_genre_dict_desc)\r\n",
         "print(android_genre_dict_desc_percent)\r\n",
         "print(\"\\n\")\r\n",
         "ios_genre_dict_desc = sort_dict(ios_genre_dict, desc=True, percent=False)\r\n",
-        "ios_genre_dict_desc_percent = sort_dict(ios_genre_dict, desc=True)\r\n",
-        "print(\"iOS App Genres\")\r\n",
+        "ios_genre_dict_desc_percent = sort_dict(ios_genre_dict, desc=True, percent=True)\r\n",
+        "print(\"iOS App Genres (Raw / %)\")\r\n",
         "print(ios_genre_dict_desc)\r\n",
         "print(ios_genre_dict_desc_percent)\r\n",
         "print(\"\\n\")\r\n",
         "\r\n"
       ],
       "id": "CnXIbc6UOlVn",
-      "execution_count": 31,
+      "execution_count": 248,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Android App Categories\n",
+            "Android App Categories (Raw / %)\n",
             "{'FAMILY': 1676, 'GAME': 862, 'TOOLS': 750, 'BUSINESS': 407, 'LIFESTYLE': 346, 'PRODUCTIVITY': 345, 'FINANCE': 328, 'MEDICAL': 313, 'SPORTS': 301, 'PERSONALIZATION': 294, 'COMMUNICATION': 287, 'HEALTH_AND_FITNESS': 273, 'PHOTOGRAPHY': 261, 'NEWS_AND_MAGAZINES': 248, 'SOCIAL': 236, 'TRAVEL_AND_LOCAL': 207, 'SHOPPING': 199, 'BOOKS_AND_REFERENCE': 190, 'DATING': 165, 'VIDEO_PLAYERS': 159, 'MAPS_AND_NAVIGATION': 124, 'FOOD_AND_DRINK': 110, 'EDUCATION': 103, 'ENTERTAINMENT': 85, 'LIBRARIES_AND_DEMO': 83, 'AUTO_AND_VEHICLES': 82, 'HOUSE_AND_HOME': 73, 'WEATHER': 71, 'EVENTS': 63, 'PARENTING': 58, 'ART_AND_DESIGN': 57, 'COMICS': 55, 'BEAUTY': 53}\n",
             "{'FAMILY': 18.91, 'GAME': 9.72, 'TOOLS': 8.46, 'BUSINESS': 4.59, 'LIFESTYLE': 3.9, 'PRODUCTIVITY': 3.89, 'FINANCE': 3.7, 'MEDICAL': 3.53, 'SPORTS': 3.4, 'PERSONALIZATION': 3.32, 'COMMUNICATION': 3.24, 'HEALTH_AND_FITNESS': 3.08, 'PHOTOGRAPHY': 2.94, 'NEWS_AND_MAGAZINES': 2.8, 'SOCIAL': 2.66, 'TRAVEL_AND_LOCAL': 2.34, 'SHOPPING': 2.25, 'BOOKS_AND_REFERENCE': 2.14, 'DATING': 1.86, 'VIDEO_PLAYERS': 1.79, 'MAPS_AND_NAVIGATION': 1.4, 'FOOD_AND_DRINK': 1.24, 'EDUCATION': 1.16, 'ENTERTAINMENT': 0.96, 'LIBRARIES_AND_DEMO': 0.94, 'AUTO_AND_VEHICLES': 0.93, 'HOUSE_AND_HOME': 0.82, 'WEATHER': 0.8, 'EVENTS': 0.71, 'PARENTING': 0.65, 'ART_AND_DESIGN': 0.64, 'COMICS': 0.62, 'BEAUTY': 0.6}\n",
             "\n",
             "\n",
-            "Android App Genres\n",
+            "Android App Genres (Raw / %)\n",
             "{'Tools': 749, 'Entertainment': 538, 'Education': 474, 'Business': 407, 'Lifestyle': 345, 'Finance': 328, 'Medical': 313, 'Sports': 307, 'Personalization': 294, 'Communication': 287, 'Action': 275, 'Health & Fitness': 273, 'Photography': 261, 'News & Magazines': 248, 'Social': 236, 'Travel & Local': 206, 'Shopping': 199, 'Books & Reference': 190, 'Simulation': 181, 'Dating': 165, 'Arcade': 164, 'Video Players & Editors': 157, 'Casual': 156, 'Maps & Navigation': 124, 'Food & Drink': 110, 'Puzzle': 100, 'Racing': 88, 'Libraries & Demo': 83, 'Auto & Vehicles': 82, 'Strategy': 81, 'House & Home': 73, 'Weather': 71, 'Events': 63, 'Adventure': 60, 'Comics': 54, 'Art & Design': 53, 'Parenting': 44, 'Card': 40, 'Casino': 38, 'Trivia': 37, 'Educational;Education': 35, 'Board': 34, 'Educational': 33, 'Education;Education': 30, 'Word': 23, 'Casual;Pretend Play': 21, 'Music': 18, 'Entertainment;Music & Video': 15, 'Casual;Brain Games': 12, 'Arcade;Action & Adventure': 11, 'Action;Action & Adventure': 9, 'Educational;Pretend Play': 8, 'Entertainment;Brain Games': 7, 'Art & Design;Creativity': 6, 'Education;Pretend Play': 5, 'Education;Creativity': 4, 'Education;Brain Games': 3, 'Casual;Education': 2, 'Comics;Creativity': 1}\n",
             "{'Tools': 8.45, 'Entertainment': 6.07, 'Education': 5.35, 'Business': 4.59, 'Lifestyle': 3.89, 'Finance': 3.7, 'Medical': 3.53, 'Sports': 3.46, 'Personalization': 3.32, 'Communication': 3.24, 'Action': 3.1, 'Health & Fitness': 3.08, 'Photography': 2.94, 'News & Magazines': 2.8, 'Social': 2.66, 'Travel & Local': 2.32, 'Shopping': 2.25, 'Books & Reference': 2.14, 'Simulation': 2.04, 'Dating': 1.86, 'Arcade': 1.85, 'Video Players & Editors': 1.77, 'Casual': 1.76, 'Maps & Navigation': 1.4, 'Food & Drink': 1.24, 'Puzzle': 1.13, 'Racing': 0.99, 'Libraries & Demo': 0.94, 'Auto & Vehicles': 0.93, 'Strategy': 0.91, 'House & Home': 0.82, 'Weather': 0.8, 'Events': 0.71, 'Adventure': 0.68, 'Comics': 0.61, 'Art & Design': 0.6, 'Parenting': 0.5, 'Card': 0.45, 'Casino': 0.43, 'Trivia': 0.42, 'Educational;Education': 0.39, 'Board': 0.38, 'Educational': 0.37, 'Education;Education': 0.34, 'Word': 0.26, 'Casual;Pretend Play': 0.24, 'Music': 0.2, 'Entertainment;Music & Video': 0.17, 'Casual;Brain Games': 0.14, 'Arcade;Action & Adventure': 0.12, 'Action;Action & Adventure': 0.1, 'Educational;Pretend Play': 0.09, 'Entertainment;Brain Games': 0.08, 'Art & Design;Creativity': 0.07, 'Education;Pretend Play': 0.06, 'Education;Creativity': 0.05, 'Education;Brain Games': 0.03, 'Casual;Education': 0.02, 'Comics;Creativity': 0.01}\n",
             "\n",
             "\n",
-            "iOS App Genres\n",
+            "iOS App Genres (Raw / %)\n",
             "{'Games': 1874, 'Entertainment': 254, 'Photo & Video': 160, 'Education': 118, 'Social Networking': 106, 'Shopping': 84, 'Utilities': 81, 'Sports': 69, 'Music': 66, 'Health & Fitness': 65, 'Productivity': 56, 'Lifestyle': 51, 'News': 43, 'Travel': 40, 'Finance': 36, 'Weather': 28, 'Food & Drink': 26, 'Reference': 18, 'Business': 17, 'Book': 14, 'Navigation': 6, 'Catalogs': 4}\n",
             "{'Games': 58.16, 'Entertainment': 7.88, 'Photo & Video': 4.97, 'Education': 3.66, 'Social Networking': 3.29, 'Shopping': 2.61, 'Utilities': 2.51, 'Sports': 2.14, 'Music': 2.05, 'Health & Fitness': 2.02, 'Productivity': 1.74, 'Lifestyle': 1.58, 'News': 1.33, 'Travel': 1.24, 'Finance': 1.12, 'Weather': 0.87, 'Food & Drink': 0.81, 'Reference': 0.56, 'Business': 0.53, 'Book': 0.43, 'Navigation': 0.19, 'Catalogs': 0.12}\n",
             "\n",
@@ -938,6 +937,82 @@
         "\r\n"
       ],
       "id": "Fg7tu9S-uDDu"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PhHhqKq01Tdo"
+      },
+      "source": [
+        "## Installations as a measure of popularity\r\n",
+        "Play Store data has the 'Installs' column which we can use to calculate the most-installed genres.\r\n",
+        "\r\n",
+        "App Store data does not, but we can use the rating_count_column as a proxy because we only need relative popularity, not total popularity.\r\n",
+        "\r\n",
+        "### Function: avg_genre_install\r\n",
+        "- Loop through the unique genres \r\n",
+        "- Sum the user_rating_count\r\n",
+        "- Count the number of apps in genre\r\n",
+        "- Average: total_r_count / total_a_count.\r\n",
+        "\r\n",
+        "### Columns to analyse\r\n",
+        "- iOS: prime_genre = -5, total_rating_count = 5\r\n",
+        "- Android: genres = 9, installs = 5"
+      ],
+      "id": "PhHhqKq01Tdo"
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KsDnt7-7093M",
+        "outputId": "5124821f-6d90-41fa-84ed-96ad38e7ec3f"
+      },
+      "source": [
+        "\r\n",
+        "\r\n",
+        "\r\n",
+        "def avg_genre_install(dataset, genre_col, avg_this_col, desc=True, percent=False):\r\n",
+        "  genre_table = freq_table(dataset, genre_col)\r\n",
+        "  avg_genre_table = {}\r\n",
+        "  for genre in genre_table:\r\n",
+        "    total_ratings_per_genre = 0\r\n",
+        "    total_apps_in_genre = 0\r\n",
+        "    for app in dataset:\r\n",
+        "      if app[genre_col] == genre:\r\n",
+        "        total_ratings_per_genre += float(app[avg_this_col])\r\n",
+        "        total_apps_in_genre += 1\r\n",
+        "        avg_rating_for_genre = int(total_ratings_per_genre / total_apps_in_genre)\r\n",
+        "        avg_genre_table[genre] = avg_rating_for_genre\r\n",
+        "  if percent and desc:\r\n",
+        "    sorted_avg_genre_table = sort_dict(avg_genre_table, desc=True, percent=True)\r\n",
+        "  if (not desc) and percent:\r\n",
+        "    sorted_avg_genre_table = sort_dict(avg_genre_table, desc=False, percent=True)\r\n",
+        "  if desc and (not percent):\r\n",
+        "    sorted_avg_genre_table = sort_dict(avg_genre_table, desc=True, percent=False)  \r\n",
+        "  elif (not percent) and (not desc):\r\n",
+        "    sorted_avg_genre_table = sort_dict(avg_genre_table, desc=False, percent=False)\r\n",
+        "  return sorted_avg_genre_table\r\n",
+        "\r\n",
+        "print(\"Apple Play Store - average ratings given for each genre as a % of the total giving an indication of which genre is most downloaded.\")\r\n",
+        "ios_avg_genre_ratings_ios = avg_genre_install(free_eng_ios, -5, 5, desc=True, percent=True)\r\n",
+        "print(ios_avg_genre_ratings_ios)\r\n",
+        "\r\n"
+      ],
+      "id": "KsDnt7-7093M",
+      "execution_count": 249,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Apple Play Store - average ratings given for each genre as a % of the total giving an indication of which genre is most downloaded.\n",
+            "{'Navigation': 12.12, 'Reference': 10.55, 'Social Networking': 10.08, 'Music': 8.07, 'Weather': 7.36, 'Book': 5.6, 'Food & Drink': 4.69, 'Finance': 4.43, 'Photo & Video': 4.01, 'Travel': 3.98, 'Shopping': 3.79, 'Health & Fitness': 3.28, 'Sports': 3.24, 'Games': 3.21, 'News': 2.99, 'Productivity': 2.96, 'Utilities': 2.63, 'Lifestyle': 2.32, 'Entertainment': 1.98, 'Business': 1.06, 'Education': 0.99, 'Catalogs': 0.56, 'Medical': 0.09}\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
