--- a/App_Store_Analysis.ipynb
+++ b/App_Store_Analysis.ipynb
@@ -971,9 +971,6 @@
         "outputId": "5124821f-6d90-41fa-84ed-96ad38e7ec3f"
       },
       "source": [
-        "\r\n",
-        "\r\n",
-        "\r\n",
         "def avg_genre_install(dataset, genre_col, avg_this_col, desc=True, percent=False):\r\n",
         "  genre_table = freq_table(dataset, genre_col)\r\n",
         "  avg_genre_table = {}\r\n",
@@ -1013,6 +1010,101 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "H3umr-42pDdG"
+      },
+      "source": [
+        "### Apple Store Analysis\r\n",
+        "Previously, the analysis suggested a game with family elements.\r\n",
+        "\r\n",
+        "However, it's likely there is a selection bias at play here. It is not possible that 50% of apps only make up 3% of the downloads. Probably, people are more moved to rate navigation and reference which have utility, over games which are quickly deleted if not to the downloader's taste.\r\n",
+        "\r\n",
+        "## Popularity Analysis - Play Store\r\n",
+        "\r\n",
+        "### Cleaning\r\n",
+        "That installs column contains strings such as \"10,000+\" so they need cleaning before we can convert and average them"
+      ],
+      "id": "H3umr-42pDdG"
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gZDLFNYYqyB1"
+      },
+      "source": [
+        "test = [\"100,000\", \"10,000plus\", \"\", \"1,000+\"]\r\n",
+        "\r\n",
+        "for app in free_eng_android:\r\n",
+        "  n_installs = app[5]\r\n",
+        "  n_installs = n_installs.replace(',', '')\r\n",
+        "  n_installs = n_installs.replace('+', '')\r\n",
+        "  print(n_installs)\r\n",
+        "  app[5] = n_installs\r\n"
+      ],
+      "id": "gZDLFNYYqyB1",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Rfa8a5WKyEMp"
+      },
+      "source": [
+        "Now we can run the **avg_genre_install** function on the android dataset."
+      ],
+      "id": "Rfa8a5WKyEMp"
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "z4bhXCF1yXjT",
+        "outputId": "0a408b6c-ba24-40ea-ee67-457ce3411ae0"
+      },
+      "source": [
+        "print(\"Google Play Store - average ratings given for each genre as a % of the total giving an indication of which genre is most downloaded.\")\r\n",
+        "avg_genre_ratings_ios = avg_genre_install(free_eng_android, 9, 5, desc=True, percent=False)\r\n",
+        "print(avg_genre_ratings_ios)\r\n"
+      ],
+      "id": "z4bhXCF1yXjT",
+      "execution_count": 294,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Google Play Store - average ratings given for each genre as a % of the total giving an indication of which genre is most downloaded.\n",
+            "{'Communication': 38456119, 'Adventure;Action & Adventure': 35333333, 'Video Players & Editors': 24947335, 'Social': 23253652, 'Arcade': 22888365, 'Casual': 19569221, 'Puzzle;Action & Adventure': 18366666, 'Photography': 17840110, 'Educational;Action & Adventure': 17016666, 'Productivity': 16787331, 'Racing': 15910645, 'Travel & Local': 14051476, 'Casual;Action & Adventure': 12916666, 'Action': 12603588, 'Strategy': 11199902, 'Tools': 10802461, 'Lifestyle;Pretend Play': 10000000, 'News & Magazines': 9549178, 'Music': 9445583, 'Educational;Pretend Play': 9375000, 'Puzzle;Brain Games': 9280666, 'Word': 9094458, 'Racing;Action & Adventure': 8816666, 'Books & Reference': 8767811, 'Puzzle': 8302861, 'Video Players & Editors;Music & Video': 7500000, 'Shopping': 7036877, 'Role Playing;Action & Adventure': 7000000, 'Casual;Pretend Play': 6957142, 'Entertainment;Music & Video': 6413333, 'Action;Action & Adventure': 5888888, 'Entertainment': 5602792, 'Education;Brain Games': 5333333, 'Role Playing;Pretend Play': 5275000, 'Personalization': 5201482, 'Weather': 5074486, 'Music;Music & Video': 5050000, 'Video Players & Editors;Creativity': 5000000, 'Adventure': 4922785, 'Simulation;Action & Adventure': 4857142, 'Education;Education': 4759517, 'Board': 4759209, 'Sports': 4596842, 'Educational;Brain Games': 4433333, 'Health & Fitness': 4188821, 'Maps & Navigation': 4056941, 'Entertainment;Creativity': 4000000, 'Role Playing': 3965645, 'Card': 3815462, 'Trivia': 3475712, 'Simulation': 3475484, 'Casino': 3427910, 'Entertainment;Brain Games': 3314285, 'Arcade;Action & Adventure': 3190909, 'Board;Action & Adventure': 3000000, 'Education;Creativity': 2875000, 'Educational;Creativity': 2333333, 'Art & Design': 2122850, 'Education;Music & Video': 2033333, 'Food & Drink': 1924897, 'Education;Pretend Play': 1800000, 'Educational;Education': 1737143, 'Business': 1712290, 'Casual;Brain Games': 1425916, 'Lifestyle': 1412998, 'Finance': 1387692, 'House & Home': 1331540, 'Parenting;Music & Video': 1118333, 'Entertainment;Education': 1000000, 'Dating': 854028, 'Comics': 831873, 'Puzzle;Creativity': 750000, 'Auto & Vehicles': 647317, 'Libraries & Demo': 638503, 'Education': 550185, 'Simulation;Pretend Play': 550000, 'Beauty': 513151, 'Art & Design;Pretend Play': 500000, 'Parenting': 467977, 'Parenting;Education': 452857, 'Educational': 411184, 'Board;Brain Games': 407142, 'Art & Design;Creativity': 285000, 'Events': 253542, 'Medical': 120550, 'Art & Design;Action & Adventure': 100000, 'Comics;Creativity': 50000, 'Books & Reference;Education': 1000, 'Simulation;Education': 500, 'Trivia;Education': 100}\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JsAfgJEPzbx_"
+      },
+      "source": [
+        "Further analysis is likely to reveal that some major apps like WhatsApp and YouTube are dominating 'Communication' and 'Video Players & Editors'.\r\n",
+        "\r\n",
+        "It would be wise to remove these outliers to get a better sense of the core apps that we can actually compete against.\r\n",
+        "\r\n",
+        "# Conclusions\r\n",
+        "In this project, App Store and Play Store mobile apps which were free and given English language names were analysed with the goal of finding the profile of an app which would compete well in both marketplaces.\r\n",
+        "\r\n",
+        "Therefore, we would recommend either:\r\n",
+        "1. A family-friendly game\r\n",
+        "2. An app based around a popular book\r\n",
+        "\r\n",
+        "Option 2 is the recommendation we would make based on this analysis due to the much smaller marketplace and therefore more well-defined niche."
+      ],
+      "id": "JsAfgJEPzbx_"
     }
   ]
 }
